# re-forge

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  BENCHMARKS_v0.2.md  CHANGELOG.md  CNAME  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.md  difference.html  index.html  pitch.html  poster.html  pyproject.toml  setup.sh  sync.sh
.github/workflows/: ci.yml
agents/: EDD-ADDENDUM.md
agents/docs-team/: docs-detector.md  docs-diagrammer.md  docs-evaluator.md  docs-lead.md  docs-planner.md  docs-reader.md  docs-retrospector.md  docs-reviewer.md  docs-scribe.md  docs-skeptic.md  docs-tester.md  docs-writer.md
agents/engineering-team/: PROTOCOL.md  engineering-adversary.md  engineering-architect.md  engineering-debugger.md  engineering-evaluator.md  (+9 more)
assets/: index-B0PnPLVo.css  index-BzoypaV7.js
docs/: CATALOG.md  SITE-AUTH-SETUP.md
hooks/: cascade-research-to-engineering.sh  evolution-scout.sh  log-evidence-writes.sh  session-capture.sh
memory/: engineering-lead.md  evolution-lead.md
memory-mcp/: README.md  server.py
scripts/: build-dashboard-data.py  build_catalog.py  doctor.sh  forge-gap-refresh.sh  mint-org-code.py  setup-schedules.sh  team_status.sh  test-infrastructure.sh  uninstall.sh
showcase/: index.html  package-lock.json  package.json  vite.config.js
skills/: ECC-ATTRIBUTION.md
specs/: unified-site.md
teams/: AGENT-RESILIENCE.md
tests/: conftest.py  test_catalog.py  test_frontmatter.py  test_hooks.py  test_install_smoke.py  test_links.py  test_memory_mcp.py  test_prose_counts.py  test_shell.py  test_uninstall.py
(+257 files in other folders)
